# recutils

./: CHANGELOG.md  LICENSE  Makefile  README.md  manual.txt  pyproject.toml
.github/workflows/: publish.yml
src/python_recutils/: __init__.py  parser.py  recsel.py  sex.py
src/recutils/: recfix.py  recsel.py  sex.py
tests/: conftest.py  test_parser.py  test_recfix.py  test_recsel.py  test_sex.py
