[project]
name = "python-recutils"
version = "0.1.0"
description = "A python implementation of recutils"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
