[project]
name = "recutils"
version = "0.1.0"
description = "A python implementation of recutils"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
license = "MIT"
authors = [
    { name = "Harry Khanna", email = "harry@khanna.law" }
]
keywords = ["recutils", "rec", "parser", "database", "text-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/hkhanna/recutils"
Repository = "https://github.com/hkhanna/recutils"
Issues = "https://github.com/hkhanna/recutils/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
